# sandbox-gcloud

./: .gitignore  README.md  googledrivelist.py  main.py  pyproject.toml  requirements.txt  sample_id.csv
src/sandbox_gcloud/: googledrivelist.py  share_with_group.py
